resources/testing-audit-scanner-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-audit-scanner
  labels:
    cost-center: "123"
