resources/private-registry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      run: registry
  template:
    metadata:
      labels:
        run: registry
    spec:
      containers:
      - name: registry
        image: registry:3
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-certs
          mountPath: "/certs"
          readOnly: true
        - name: registry-auth
          mountPath: "/auth"
          readOnly: true
      volumes:
      - name: registry-certs
        secret:
          secretName: registry-cert
      - name: registry-auth
        configMap:
          name: registry-auth

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: registry
  name: registry
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 30707
  selector:
    run: registry
  type: NodePort
